# kaleic

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
samples/: effect.kl  everything.kl  fibonacci.kl  future_constructs.kl  structs.kl  traits.kl
src/: ast.rs  driver.rs  errors.rs  hir.rs  inference.rs  lexer.rs  lib.rs  lowerer.rs  main.rs  parser.rs  pretty_print.rs  resolve.rs  session.rs  tbir.rs  ty.rs  typeck.rs
src/codegen/: cranelift.rs  llvm.rs  mod.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__fibo-2.snap  snapshots__fibo.snap
