[package]
name = "kaleic"
version = "0.0.0"
edition = "2024"

[dependencies]
ariadne = "0.5"
bumpalo = "3"
clap = { version = "4", features = ["derive"] }
index_vec = "0.1"
parking_lot = "0.12"
string-interner = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cranelift backend
cranelift = { version = "0.122", optional = true }
cranelift-control = { version = "0.122", optional = true }
cranelift-jit = { version = "0.122", optional = true }
cranelift-module = { version = "0.122", optional = true }
cranelift-native = { version = "0.122", optional = true }
cranelift-object = { version = "0.122", optional = true }
target-lexicon = { version = "0.13", optional = true }

# LLVM Backend
inkwell = { version = "0.6", features = ["llvm18-1"], optional = true }

[dev-dependencies]
insta = "1"

[patch.crates-io]
ariadne = { git = "https://github.com/mrnossiom/ariadne", branch = "expose-report-fields" }

[features]
# default = ["cranelift"]
# default = ["llvm", "cranelift"]

debug = []

llvm = ["dep:inkwell"]
cranelift = [
  "dep:cranelift",
  "dep:cranelift-control",
  "dep:cranelift-jit",
  "dep:cranelift-module",
  "dep:cranelift-native",
  "dep:cranelift-object",
  "dep:target-lexicon",
]

[lints.rust]
# missing_docs = "warn"

# not forbid because jit-ing is inherently unsafe
unsafe_code = "deny"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
panic = "warn"
todo = "warn"
unwrap_used = "warn"
# expect_used = "warn"
# missing_docs_in_private_items = "warn"
# print_stderr = "warn"
# print_stdout = "warn"

missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
wildcard_imports = "allow"
